fixed solution collapse u1 review

--- a/css/printing.css
+++ b/css/printing.css
@@ -14,7 +14,9 @@ html{
     color: #b30000 !important;
 }
 
-
+.solutioncollapse {
+    color: #b30000 !important;
+}
      
 
 
